obteniendo ruta absoluta y extension del archivo

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "node": ">=14.x"
   },
   "dependencies": {
+    "colors": "^1.4.0",
     "prompt-sync": "^4.2.0",
     "prompt-sync-history": "^1.0.1"
   }
